# Qsql

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.arm.yaml  docker-compose.yaml  pyproject.toml  test_search_algorithm.py
docs/: API_USAGE_METADATA.md
resources/: query_light_tokens.json  query_synonyms.json
scripts/: __init__.py  generate_semantic_draft.py  real_business_online_retail_smoke.py  semantic_eval_runner.py  sync_dataset_schema.py
src/: .editorconfig
static/: css2.css  custom-train-question.js  index.html  qsql-assistant.css  qsql-assistant.js
tests/: conftest.py  test_app_security.py  test_app_semantic_migration.py  test_base_connector_delegation.py  test_base_runtime_delegation.py  test_bird_california_schools_catalog.py  test_bird_card_games_catalog.py  test_bird_codebase_community_catalog.py  test_bird_debit_card_catalog.py  test_bird_european_football_2_catalog.py  test_bird_financial_catalog.py  test_bird_formula_1_catalog.py  test_bird_student_club_catalog.py  test_bird_superhero_catalog.py  test_bird_thrombosis_prediction_catalog.py  test_bird_toxicology_catalog.py  test_brand_assets.py  test_docker_qsql_config.py  test_generate_semantic_draft_script.py  test_imports.py  test_instantiation.py  test_metadata_api.py  test_metadata_scheduler.py  test_metadata_store.py  test_observability_api.py  test_openai_compatible_provider.py  test_pgvector.py  test_plotly_security.py  test_plugins_lazy_loading.py  test_pyproject_dependencies.py  test_qsql_assistant_ui.py  test_real_business_online_retail_catalog.py  test_retrieval_ab_compare.py  test_schema_import_style.py  test_semantic_draft_generator.py  test_semantic_eval_runner.py  test_semantic_examples.py  (+9 more)
(+161 files in other folders)
