[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qsql"
version = "0.7.9"
description = "Controlled semantic SQL service built on pydantic and pydantic-ai"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # [CUSTOM] 主依赖继续收口到 SQL / 结构化问答主链路，移除文档知识库与 OCR 相关依赖。
    "requests==2.34.2",
    "plotly==6.8.0",
    "pandas==3.0.3",
    "sqlparse==0.5.5",
    "kaleido==1.3.0",
    "flask==3.1.3",
    "sqlalchemy==2.0.50",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "simhash==2.1.2",
    "scikit-learn==1.9.0",
    "tiktoken==0.13.0",
    "chromadb==0.6.3",
    "openai==2.41.1",
    "pydantic-ai==1.107.0",
    "httpx==0.28.1",
    "jieba==0.42.1",
    "rank-bm25==0.2.2",
    "cryptography==48.0.1",
    "PyMySQL==1.2.0"
]

[project.optional-dependencies]

postgres = ["psycopg2-binary", "db-dtypes"]
mysql = ["PyMySQL==1.2.0"]
clickhouse = ["clickhouse_connect"]
bigquery = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
duckdb = ["duckdb"]
chromadb = ["chromadb==0.6.3"]
openai = ["openai==2.41.1"]
rank_bm25 = ["rank-bm25==0.2.2"]
cryptography = ["cryptography==48.0.1"]

# [CUSTOM] Docker 生产镜像只安装当前 app.py 启动链路需要的附加依赖，避免 all 拉取未使用模块。
runtime = ["PyMySQL==1.2.0"]

all = [
    "psycopg2-binary",
    "db-dtypes",
    "PyMySQL",
    "google-cloud-bigquery",
    "snowflake-connector-python",
    "duckdb",
    "openai",
    "chromadb<1.0.0",
    "simhash",
    "scikit-learn"
]
